src/shared/components/tab/tab.css
/**
 * Block
 */

.hw-tab {
  overflow-x: scroll;
  white-space: nowrap;
  position: relative;
  width: 100%;
  margin: 0;
  padding-left: 0;
  -ms-overflow-style: none;

  &::-webkit-scrollbar {
    display: none;
  }

  /* The box-shadow creates the gray bar under the tab items */
  box-shadow: inset 0 -1px 0 0 var(--hw-color-gray-light-fill);

  /**
   * Elements
   */

  &__item {
    font-size: var(--hw-font-size-p);
    display: inline-block;
    margin-left: 0px;
    padding-bottom: var(--hw-spacing-small-3);
    margin-right: 32px;
    color: var(--hw-color-black);
    &--selected {
      /**
       * Border color will be set to transparent during runtime
       * This border is shown only if the hw-tab javascript is not running
       */
      color: var(--hw-color-primary-dark);
      border-bottom: var(--hw-border-thickness-thick) solid var(--hw-color-primary);
    }
    &:hover {
      color: var(--hw-color-primary-dark);
    }
  }

  &__marker {
    bottom: 0;
    position: absolute;
    height: 0;
    border-bottom: var(--hw-border-thickness-thick) solid var(--hw-color-primary);

    /**
     * The following will be modified by javascript during runtime to move the marker around
     * - transition
     * - left
     * - width
     */

    transition: left var(--hw-transition-time-quick), width var(--hw-transition-time-quick);
    left: 0;
    width: 0;
  }
}

